--- a/stranica.html
+++ b/stranica.html
@@ -490,7 +490,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <div class="majkomoja">
     <br><br>
-    <h4> Gallery </h4>
+   <div class="heading">
+                    <br><br><br>
+                    <h1>Shop</h1>
+                    <br><br>
+                  </div>
     
     <br>
     <br>
