--- a/stranicaa.html
+++ b/stranicaa.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Drei Rucci Official</title>
-<link rel="stylesheet" href="stranicaa.css">
+<link rel="stylesheet" href="stranicaaa.css">
 <link href="https://use.fontawesome.com/releases/v5.0.0/css/all.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
